Move the ETMViewStateSaver to kdepimlibs now that its kdelibs deps are accessible.
svn path=/trunk/KDE/kdepimlibs/; revision=1155521

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -92,6 +92,7 @@ set( akonadikde_LIB_SRC
   entitytreemodel_p.cpp
   entitytreeview.cpp
   entitytreeviewstatesaver.cpp
+  etmviewstatesaver.cpp
   erroroverlay.cpp
   exception.cpp
   favoritecollectionsmodel.cpp
@@ -250,6 +251,7 @@ install( FILES
   entitytreemodel.h
   entitytreeview.h
   entitytreeviewstatesaver.h
+  etmviewstatesaver.h
   exception.h
   favoritecollectionsmodel.h
   item.h
