Add static akonadi messageflag constants for use in the imap resource and wherever canonical string values of message flags are required.
svn path=/branches/KDE/4.5/kdepimlibs/; revision=1155546

--- a/akonadi/kmime/CMakeLists.txt
+++ b/akonadi/kmime/CMakeLists.txt
@@ -17,6 +17,7 @@ set( kmimeakonadi_LIB_SRC
   messagefolderattribute.cpp
   messagemodel.cpp
   messageparts.cpp
+  messageflags.cpp
   messagethreadingattribute.cpp
   messagethreaderproxymodel.cpp
 )
@@ -47,6 +48,7 @@ install( FILES
   messagefolderattribute.h
   messagemodel.h
   messageparts.h
+  messageflags.h
   messagethreadingattribute.h
   messagethreaderproxymodel.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/akonadi/kmime COMPONENT Devel
