SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.5/kdepimlibs/; revision=1155768

--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -7,7 +7,7 @@ Comment=Skype Internet Telephony
 Comment[ca]=Telefonia d'Internet Skype
 Comment[ca@valencia]=Telefonia d'Internet Skype
 Comment[cs]=Internetová telefonie Skype
-Comment[da]=Skype internettelefoni
+Comment[da]=Internettelefoni med Skype
 Comment[de]=Skype-Internettelefonie
 Comment[en_GB]=Skype Internet Telephony
 Comment[eo]=Skype Interreta Telefonado
