--- a/akonadi/tests/CMakeLists.txt
+++ b/akonadi/tests/CMakeLists.txt
@@ -156,6 +156,7 @@ add_akonadi_isolated_test(itemstoretest.cpp)
 add_akonadi_isolated_test(itemdeletetest.cpp)
 add_akonadi_isolated_test(entitycachetest.cpp)
 add_akonadi_isolated_test(monitortest.cpp)
+add_akonadi_isolated_test(monitorfiltertest.cpp)
 add_akonadi_isolated_test(searchjobtest.cpp)
 add_akonadi_isolated_test(changerecordertest.cpp)
 add_akonadi_isolated_test(resourcetest.cpp)
