--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -29,6 +29,7 @@ include_directories(
   ${KDE4_INCLUDE_DIR}
   ${AKONADI_INCLUDE_DIR}
   ${AKONADI_INCLUDE_DIR}/akonadi/private
+  ${CMAKE_SOURCE_DIR}/kabc
 )
 
 # libakonadi-kde
