Move MessageStatus to pimlibs. Cleanup forthcoming
svn path=/branches/KDE/4.5/kdepimlibs/; revision=1156694

--- a/akonadi/kmime/CMakeLists.txt
+++ b/akonadi/kmime/CMakeLists.txt
@@ -18,6 +18,7 @@ set( kmimeakonadi_LIB_SRC
   messagemodel.cpp
   messageparts.cpp
   messageflags.cpp
+  messagestatus.cpp
   messagethreadingattribute.cpp
   messagethreaderproxymodel.cpp
 )
@@ -49,6 +50,7 @@ install( FILES
   messagemodel.h
   messageparts.h
   messageflags.h
+  messagestatus.h
   messagethreadingattribute.h
   messagethreaderproxymodel.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/akonadi/kmime COMPONENT Devel
