- changed the way kdelibs is linked against kdepimlibs to static for wince
svn path=/trunk/KDE/kdepimlibs/; revision=1157188

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,6 +99,7 @@ endif (KDEPIM_NO_KRESOURCES)
 
 if(WINCE)
   set(LIBRARY_TYPE STATIC)
+  add_definitions(-DKDELIBS_STATIC_LIBS)
   add_definitions(-DKDEPIM_STATIC_LIBS)
 else(WINCE)
   set(LIBRARY_TYPE SHARED)
