Rename the -v2 version of this proxy to vanilla as it is in the komo branch.
svn path=/trunk/KDE/kdepimlibs/; revision=1158325

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -159,7 +159,7 @@ set( akonadikde_LIB_SRC
 
 if (NOT WINCE)
   set(akonadikde_LIB_SRC ${akonadikde_LIB_SRC}
-    kdescendantsproxymodel2.cpp
+    kdescendantsproxymodel.cpp
   )
 endif (NOT WINCE)
 
