Notify the flags even if they form an empty set.
svn path=/trunk/KDE/kdepimlibs/; revision=1158773

--- a/kimap/tests/CMakeLists.txt
+++ b/kimap/tests/CMakeLists.txt
@@ -33,6 +33,7 @@ KIMAP_UNIT_TESTS(
   selectjobtest
   createjobtest
   deletejobtest
+  fetchjobtest
   renamejobtest
   subscribejobtest
   unsubscribejobtest
