Move StandardContactActionManager from kdepim/kaddressbook/ to kdepimlibs/akonadi/contact/
svn path=/trunk/KDE/kdepimlibs/; revision=1161546

--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -85,6 +85,7 @@ set(akonadicontact_LIB_SRC
   leafextensionproxymodel.cpp
   recentcontactscollections.cpp
   recentcontactscollectionrequestjob.cpp
+  standardcontactactionmanager.cpp
   standardcontactformatter.cpp
   standardcontactgroupformatter.cpp
   waitingoverlay.cpp
@@ -161,6 +162,7 @@ install( FILES
   emailaddressselectiondialog.h
   emailaddressselectionwidget.h
   recentcontactscollectionrequestjob.h
+  standardcontactactionmanager.h
   standardcontactformatter.h
   standardcontactgroupformatter.h
   DESTINATION ${INCLUDE_INSTALL_DIR}/akonadi/contact COMPONENT Devel
