--- a/akonadi/tests/CMakeLists.txt
+++ b/akonadi/tests/CMakeLists.txt
@@ -121,6 +121,7 @@ add_akonadi_demo(agentinstancewidgettest.cpp)
 add_akonadi_demo(agenttypewidgettest.cpp)
 add_akonadi_demo(pluginloadertest.cpp)
 add_akonadi_demo(selftester.cpp)
+add_akonadi_demo(collectiondialog.cpp)
 
 kde4_add_executable( akonadi-firstrun TEST ../firstrun.cpp firstrunner.cpp )
 target_link_libraries( akonadi-firstrun akonadi-kde ${KDE4_KDEUI_LIBS} )
