kdepimlibs adjustments for WinCE:
-disabled kblog, kholidays and kontactinterface (unnneeded for Kontact Mobile)
-disabled code parts using Qt features unavailable on WinCE: clipboard, DnD, advanced widgets, etc
-stripped out Solid usage from akonadi/agentbase.cpp

svn path=/trunk/KDE/kdepimlibs/; revision=1162751

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,12 +126,16 @@ add_subdirectory(qgpgme)
 
 if (NOT KDEPIM_ONLY_KLEO)
   add_subdirectory(kabc)
-  add_subdirectory(kblog)
+  if (NOT WINCE)
+    add_subdirectory(kblog)
+  endif(NOT WINCE)
   add_subdirectory(kcal)
   add_subdirectory(kcalcore)
   add_subdirectory(kcalutils)
   add_subdirectory(akonadi) # depends on kabc is build
+  if (NOT WINCE)
   add_subdirectory(kholidays)
+  endif (NOT WINCE)
   add_subdirectory(kimap)
   add_subdirectory(kioslave)
   add_subdirectory(kldap)
@@ -147,7 +151,9 @@ if (NOT KDEPIM_ONLY_KLEO)
   add_subdirectory(mailtransport)
   add_subdirectory(microblog)
   add_subdirectory(syndication)
+  if (NOT WINCE)
   add_subdirectory(kontactinterface)
+  endif (NOT WINCE)
   # Build the CamelCase headers
   add_subdirectory(includes)
 endif (NOT KDEPIM_ONLY_KLEO)
