--- a/akonadi/mail/CMakeLists.txt
+++ b/akonadi/mail/CMakeLists.txt
@@ -14,10 +14,10 @@ macro(kcfg_generate_dbus_interface _kcfg _name)
   add_custom_command(
     OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${_name}.xml
     COMMAND ${XSLTPROC_EXECUTABLE} --stringparam interfaceName ${_name}
-    ${KDE4_DATA_DIR}/akonadi-kde/kcfg2dbus.xsl
+    ${CMAKE_SOURCE_DIR}/akonadi/kcfg2dbus.xsl
     ${_kcfg}
     > ${CMAKE_CURRENT_BINARY_DIR}/${_name}.xml
-    DEPENDS ${KDE4_DATA_DIR}/akonadi-kde/kcfg2dbus.xsl
+    DEPENDS ${CMAKE_SOURCE_DIR}/akonadi/kcfg2dbus.xsl
     ${_kcfg}
     )
 endmacro(kcfg_generate_dbus_interface)
