--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,13 +113,13 @@ if (KDEPIM_NO_KRESOURCES)
   add_definitions(-DKDEPIM_NO_KRESOURCES)
 endif (KDEPIM_NO_KRESOURCES)
 
-if(WINCE)
-  set(LIBRARY_TYPE STATIC)
-  add_definitions(-DKDELIBS_STATIC_LIBS)
-  add_definitions(-DKDEPIM_STATIC_LIBS)
-else(WINCE)
+#if(WINCE)
+#  set(LIBRARY_TYPE STATIC)
+#  add_definitions(-DKDELIBS_STATIC_LIBS)
+#  add_definitions(-DKDEPIM_STATIC_LIBS)
+#else(WINCE)
   set(LIBRARY_TYPE SHARED)
-endif(WINCE)
+#endif(WINCE)
 
 ############### Now, we add the KDEPIMLibs components ###############
 # These targets will always be built
@@ -136,9 +136,7 @@ if (NOT KDEPIM_ONLY_KLEO)
   add_subdirectory(kcalcore)
   add_subdirectory(kcalutils)
   add_subdirectory(akonadi) # depends on kabc is build
-  if (NOT WINCE)
   add_subdirectory(kholidays)
-  endif (NOT WINCE)
   add_subdirectory(kimap)
   add_subdirectory(kioslave)
   add_subdirectory(kldap)
