SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.5/kdepimlibs/; revision=1164942

--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -11,6 +11,7 @@ Comment[da]=Novell GroupWise Messenger
 Comment[de]=Novell-GroupWise-Nachrichtendienst
 Comment[en_GB]=Novell GroupWise Messenger
 Comment[eo]=Novell GroupWise mesaĝilo
+Comment[es]=Mensajería de Novell GroupWise
 Comment[et]=Novell GroupWise Messenger
 Comment[fr]=Messagerie GroupWise Novell
 Comment[ga]=Teachtaire Novell GroupWise
@@ -41,6 +42,7 @@ Name[da]=GroupWise
 Name[de]=GroupWise
 Name[en_GB]=GroupWise
 Name[eo]=GroupWise
+Name[es]=GroupWise
 Name[et]=GroupWise
 Name[fr]=GroupWise
 Name[ga]=GroupWise
