--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -11,6 +11,7 @@ Comment[da]=Internet Relay Chat
 Comment[de]=Internet Relay Chat
 Comment[en_GB]=Internet Relay Chat
 Comment[eo]=Interreta plusenda babilado
+Comment[es]=Internet Relay Chat
 Comment[et]=Rühmadiskussioon internetis
 Comment[fr]=Relai Internet de discussion
 Comment[ga]=Internet Relay Chat
