--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -277,6 +277,7 @@ install( FILES
   entityhiddenattribute.h
   entitylistview.h
   entitymimetypefiltermodel.h
+  entityorderproxymodel.h
   entitytreemodel.h
   entitytreeview.h
   entitytreeviewstatesaver.h
