Install the EntityRightsFilterModel.
svn path=/trunk/KDE/kdepimlibs/; revision=1165490

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -277,6 +277,7 @@ install( FILES
   entityhiddenattribute.h
   entitylistview.h
   entitymimetypefiltermodel.h
+  entityrightsfiltermodel.h
   entityorderproxymodel.h
   entitytreemodel.h
   entitytreeview.h
