--- a/KdepimLibsConfig.cmake.in
+++ b/KdepimLibsConfig.cmake.in
@@ -48,13 +48,14 @@ set(CMAKE_MODULE_PATH "${KDEPIMLIBS_DATA_DIR}/cmake/modules" "${CMAKE_MODULE_PAT
 set(KDEPIMLIBS_TARGET_PREFIX @KDEPIMLIBS_TARGET_PREFIX@)
 
 set(KDEPIMLIBS_NO_KRESOURCES @KDEPIM_NO_KRESOURCES@)
+set(KDEPIMLIBS_NO_KCAL @KDEPIM_NO_KCAL@)
 
 # Make sure to load the exported targets only once
 # For the rest of this script it doesn't matter that much
-if(NOT TARGET KDEPIMLibs__kcal)
+if(NOT TARGET KDEPIMLibs__kabc)
    get_filename_component(_currentDir "${CMAKE_CURRENT_LIST_FILE}" PATH)
    include("${_currentDir}/KDEPimLibsLibraryTargetsWithPrefix.cmake")
-endif(NOT TARGET KDEPIMLibs__kcal)
+endif(NOT TARGET KDEPIMLibs__kabc)
 
 macro(_KDEPIMLibs_Set_Lib_Vars _prefix _lib)
   set(KDEPIMLIBS_${_prefix}_LIBRARY ${KDEPIMLIBS_TARGET_PREFIX}${_lib})
@@ -69,12 +70,14 @@ _kdepimlibs_set_lib_vars(AKONADI        akonadi-kde)
 _kdepimlibs_set_lib_vars(AKONADI_CALENDAR  akonadi-calendar)
 _kdepimlibs_set_lib_vars(AKONADI_CONTACT  akonadi-contact)
 _kdepimlibs_set_lib_vars(AKONADI_KABC   akonadi-kabc)
-_kdepimlibs_set_lib_vars(AKONADI_KCAL   akonadi-kcal)
 _kdepimlibs_set_lib_vars(AKONADI_KMIME  akonadi-kmime)
 _kdepimlibs_set_lib_vars(GPGMEPP        gpgmepp)
 _kdepimlibs_set_lib_vars(KABC           kabc)
-_kdepimlibs_set_lib_vars(KBLOG          kblog)
-_kdepimlibs_set_lib_vars(KCAL           kcal)
+if (NOT KDEPIMLIBS_NO_KCAL)
+  _kdepimlibs_set_lib_vars(AKONADI_KCAL   akonadi-kcal)
+  _kdepimlibs_set_lib_vars(KBLOG          kblog)
+  _kdepimlibs_set_lib_vars(KCAL           kcal)
+endif (NOT KDEPIMLIBS_NO_KCAL)
 _kdepimlibs_set_lib_vars(KCALCORE       kcalcore)
 _kdepimlibs_set_lib_vars(KCALUTILS      kcalutils)
 _kdepimlibs_set_lib_vars(KHOLIDAYS      kholidays)
