--- a/includes/CMakeLists.txt
+++ b/includes/CMakeLists.txt
@@ -9,8 +9,10 @@ endmacro(install_headers _dir)
 install_headers( Akonadi )
 install_headers( KHolidays )
 install_headers( KABC )
-install_headers( KBlog )
-install_headers( KCal )
+if (NOT KDEPIM_NO_KCAL)
+  install_headers( KBlog )
+  install_headers( KCal )
+endif (NOT KDEPIM_NO_KCAL)
 install_headers( KCalCore )
 install_headers( KCalUtils )
 install_headers( KIMAP )
