- add that he reads the deprecated flag from a variable
svn path=/trunk/KDE/kdepimlibs/; revision=1169802

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,8 @@ include(KDE4Defaults)
 include(MacroLibrary)
 include(KDEPlatformProfile)
 
-option(KDEPIM_NO_KRESOURCES "Build without legacy KResource support." KDE_PLATFORM_FEATURE_DISABLE_DEPRECATED)
-option(KDEPIM_NO_KCAL "Build without legacy KCal." KDE_PLATFORM_FEATURE_DISABLE_DEPRECATED)
+option(KDEPIM_NO_KRESOURCES "Build without legacy KResource support." ${KDE_PLATFORM_FEATURE_DISABLE_DEPRECATED})
+option(KDEPIM_NO_KCAL "Build without legacy KCal." ${KDE_PLATFORM_FEATURE_DISABLE_DEPRECATED})
 
 ############### Load the CTest options ###############
 # Set a timeout value of 5 minutes per test
