Extract action state handling into a separated class ActionStateManager which is used by StandardActionManager internally now. This allows us to write unit tests for the action state handling.
svn path=/trunk/KDE/kdepimlibs/; revision=1171273

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -36,6 +36,7 @@ include_directories(
 
 set( akonadikde_LIB_SRC
   entity.cpp # keep it at top to not break enable-final
+  actionstatemanager.cpp
   agentactionmanager.cpp
   agentbase.cpp
   agentfactory.cpp
