--- a/kcalcore/tests/CMakeLists.txt
+++ b/kcalcore/tests/CMakeLists.txt
@@ -76,16 +76,17 @@ endif (WIN32)
 
 macro(kcalcore_run_single_test _prefix _file _test _testarg)
   get_filename_component( _fn ${_file} NAME)
+  string(REGEX REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}" _outFile ${_file})
   set(_runner ${CMAKE_CURRENT_SOURCE_DIR}/runsingletestcase.pl)
   if (UNIX)
     set(_test_path ${EXECUTABLE_OUTPUT_PATH}/${_test}.shell)
   endif (UNIX)
   if (WIN32)
     set(_test_path ${EXECUTABLE_OUTPUT_PATH}/${_test}.exe.bat)
-    set(_runner ${PERL_EXECUTABLE} ${_runner}) 
+    set(_runner ${PERL_EXECUTABLE} ${_runner})
   endif (WIN32)
 
-  add_test( ${_prefix}-${_fn} ${_runner} ${_test_path} ${_testarg} ${_file} )
+  add_test( ${_prefix}-${_fn} ${_runner} ${_test_path} ${_testarg} ${_file} ${_outFile})
 endmacro(kcalcore_run_single_test)
 
 FILE(REMOVE ${CMAKE_CURRENT_BINARY_DIR}/FAILED.log)
