Fix the path here too
svn path=/trunk/KDE/kdepimlibs/; revision=1172272

--- a/kcalcore/tests/CMakeLists.txt
+++ b/kcalcore/tests/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories(
  ${LIBICAL_INCLUDE_DIRS}
 )
 
-add_definitions( -DICALTESTDATADIR="\\"${CMAKE_SOURCE_DIR}/tests/data/\\"" )
+add_definitions( -DICALTESTDATADIR="\\"${CMAKE_SOURCE_DIR}/kcalcore/tests/data/\\"" )
 
 MACRO(KCALCORE_UNIT_TESTS)
   FOREACH(_testname ${ARGN})
