Kleo also needs libkmime
svn path=/trunk/KDE/kdepimlibs/; revision=1173514

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,7 +155,9 @@ if (NOT KDEPIM_ONLY_KLEO)
   add_subdirectory(kimap)
   add_subdirectory(kioslave)
   add_subdirectory(kldap)
+endif (NOT KDEPIM_ONLY_KLEO)
   add_subdirectory(kmime)
+if (NOT KDEPIM_ONLY_KLEO)
   add_subdirectory(kpimidentities)
   add_subdirectory(kpimutils)
   add_subdirectory(kpimtextedit)
