On OSX, linking against uuid explicitely is wrong.
svn path=/trunk/KDE/kdepimlibs/; revision=1173766

--- a/kcalcore/CMakeLists.txt
+++ b/kcalcore/CMakeLists.txt
@@ -81,7 +81,9 @@ kde4_add_library(kcalcore ${LIBRARY_TYPE} ${kcalcore_LIB_SRCS})
 
 target_link_libraries(kcalcore ${KDE4_KDECORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${LIBICAL_LIBRARIES})
 if(HAVE_UUID_UUID_H)
-  target_link_libraries(kcalcore uuid)
+  if (NOT Q_WS_MAC)
+    target_link_libraries(kcalcore uuid)
+  endif(NOT Q_WS_MAC)
 endif(HAVE_UUID_UUID_H)
 set_target_properties(kcalcore PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION})
 install(TARGETS kcalcore EXPORT kdepimlibsLibraryTargets ${INSTALL_TARGETS_DEFAULT_ARGS})
